correct typos in 3-0 notebook

--- a/notebooks/3-0-matrix-factorization.ipynb
+++ b/notebooks/3-0-matrix-factorization.ipynb
@@ -119,8 +119,8 @@
     }
    ],
    "source": [
-    "# rating_df = pd.read_csv('../data/interim/rating_df.csv')\n",
-    "rating_df = pd.read_csv('/kaggle/input/movielens/rating_df.csv')\n",
+    "rating_df = pd.read_csv('../data/interim/rating_df.csv')\n",
+    "# rating_df = pd.read_csv('/kaggle/input/movielens/rating_df.csv')\n",
     "rating_df.head()"
    ]
   },
@@ -769,8 +769,8 @@
     }
    ],
    "source": [
-    "item_df = pd.read_csv('/kaggle/input/itemsmovie/item_df.csv')\n",
-    "# item_df = pd.read_csv('../data/interim/item_df.csv')\n",
+    "# item_df = pd.read_csv('/kaggle/input/itemsmovie/item_df.csv')\n",
+    "item_df = pd.read_csv('../data/interim/item_df.csv')\n",
     "item_df.head()"
    ]
   },
@@ -1061,15 +1061,9 @@
     "    return prediction.item()\n",
     "\n",
     "\n",
-    "true_positives = 0\n",
-    "false_positives = 0\n",
-    "false_negatives = 0\n",
-    "\n",
     "true_labels = []\n",
     "predicted_scores = []\n",
-    "\n",
     "unique_user_ids = rating_df['user_id'].unique()\n",
-    "mse_scores = []\n",
     "\n",
     "for user_id in tqdm(unique_user_ids, desc=\"Users\", unit=\"user\"):\n",
     "    user_df = rating_df[rating_df['user_id'] == user_id].copy()\n",
@@ -1127,8 +1121,8 @@
     "# Distribution of predicted labels\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.hist(ratings_array, bins=5, edgecolor='black')\n",
-    "plt.title('Distribution of Predicted Labels')\n",
-    "plt.xlabel('Predicted Labels')\n",
+    "plt.title('Distribution of Predicted Ratings')\n",
+    "plt.xlabel('Predicted Ratings')\n",
     "plt.ylabel('Frequency')\n",
     "\n",
     "plt.tight_layout()\n",
